--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </nav>
-
+    
     <!-- Main Content -->
     <main class="main">
         <div class="container">
@@ -85,7 +85,42 @@
                     </div>
                 </div>
             </div>
-
+            
+            <section class="search-section">
+                <div class="search-container">
+                    <div class="search-group">
+                        <svg class="search-icon" aria-hidden="true" viewBox="0 0 24 24">
+                            <g>
+                                <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
+                            </g>
+                        </svg>
+                        <input 
+                            id="search-input" 
+                            type="search" 
+                            class="search-input" 
+                            placeholder="Rechercher sur le web..."
+                            aria-label="Recherche web"
+                            autocomplete="off"
+                            spellcheck="false"
+                        >
+                        <div class="search-suggestions" id="searchSuggestions"></div>
+                        <div class="search-engines">
+                            <button class="search-engine active" data-engine="google" title="Google">
+                                <i data-lucide="search"></i>
+                            </button>
+                            <button class="search-engine" data-engine="duckduckgo" title="DuckDuckGo">
+                                <i data-lucide="shield"></i>
+                            </button>
+                            <button class="search-engine" data-engine="bing" title="Bing">
+                                <i data-lucide="globe"></i>
+                            </button>
+                            <button class="search-engine" data-engine="youtube" title="YouTube">
+                                <i data-lucide="play"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="linksBlock" id="linksBlock">
                 <div class="linksBlockLeft" id="linksBlockLeft"></div>
                 <div class="linksBlockRight" id="linksBlockRight"></div>
@@ -94,41 +129,6 @@
     </main>
 
     <!-- Barre de recherche -->
-    <section class="search-section">
-        <div class="search-container">
-            <div class="search-group">
-                <svg class="search-icon" aria-hidden="true" viewBox="0 0 24 24">
-                    <g>
-                        <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
-                    </g>
-                </svg>
-                <input 
-                    id="search-input" 
-                    type="search" 
-                    class="search-input" 
-                    placeholder="Rechercher sur le web..."
-                    aria-label="Recherche web"
-                    autocomplete="off"
-                    spellcheck="false"
-                >
-                <div class="search-suggestions" id="searchSuggestions"></div>
-                <div class="search-engines">
-                    <button class="search-engine active" data-engine="google" title="Google">
-                        <i data-lucide="search"></i>
-                    </button>
-                    <button class="search-engine" data-engine="duckduckgo" title="DuckDuckGo">
-                        <i data-lucide="shield"></i>
-                    </button>
-                    <button class="search-engine" data-engine="bing" title="Bing">
-                        <i data-lucide="globe"></i>
-                    </button>
-                    <button class="search-engine" data-engine="youtube" title="YouTube">
-                        <i data-lucide="play"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Raccourcis clavier -->
     <div class="keyboard-shortcuts" id="keyboardShortcuts">
@@ -154,8 +154,7 @@
             </div>
         </div>
     </div>
-
-    <!-- Footer -->
+<!-- 
     <footer class="footer">
         <div class="footer-content">
             <p class="footer-text">
@@ -163,7 +162,7 @@
                 Créé avec amour par DAYS
             </p>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- Scripts -->
     <script src="config.js"></script>
